02-helm-deployments/Deployments/KTA 7.9/Scenario 4 - AAD Integration/ktawebapp-service_non_ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: kta-webapp-service  
  namespace: kta  
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: kta-webapp
