02-helm-deployments/Deployments/KTA 7.9/Scenario 4 - AAD Integration/ktawebapp-ingress_non_ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kta-ingress
  namespace: kta
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/connection-draining-timeout: "60"
    appgw.ingress.kubernetes.io/request-timeout: "120"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/health-probe-path: "/TotalAgility/Services/SDK/ServerService.svc"
    appgw.ingress.kubernetes.io/health-probe-interval: "20"
    appgw.ingress.kubernetes.io/health-probe-timeout: "30"
spec:
  rules:
    - http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: kta-webapp-service
                port: 
                  number: 80
